# SolanaGame

./: Anchor.toml
programs/seven/: Cargo.toml
programs/seven/src/: lib.rs
